--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -293,11 +293,10 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "task"
-version = "2.10.0"
+version = "2.7.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "uuid"}
+	{org = "ballerina", name = "time"}
 ]
 
 [[package]]
@@ -328,17 +327,6 @@ name = "url"
 version = "2.6.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
-name = "uuid"
-version = "1.10.0"
-dependencies = [
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "lang.int"},
-	{org = "ballerina", name = "time"}
 ]
 
 [[package]]
@@ -391,7 +379,7 @@ modules = [
 
 [[package]]
 org = "thiyumi"
-name = "ballerina_crud_application"
+name = "ballerina_task"
 version = "0.1.0"
 dependencies = [
 	{org = "ballerina", name = "http"},
@@ -403,8 +391,8 @@ dependencies = [
 	{org = "ballerinax", name = "mysql.driver"}
 ]
 modules = [
-	{org = "thiyumi", packageName = "ballerina_crud_application", moduleName = "ballerina_crud_application"},
-	{org = "thiyumi", packageName = "ballerina_crud_application", moduleName = "ballerina_crud_application.database"},
-	{org = "thiyumi", packageName = "ballerina_crud_application", moduleName = "ballerina_crud_application.modules"}
+	{org = "thiyumi", packageName = "ballerina_task", moduleName = "ballerina_task"},
+	{org = "thiyumi", packageName = "ballerina_task", moduleName = "ballerina_task.database"},
+	{org = "thiyumi", packageName = "ballerina_task", moduleName = "ballerina_task.modules"}
 ]
 
