--- a/Config.toml
+++ b/Config.toml
@@ -1,6 +1,7 @@
-[ballerina_crud_application.database.dbConfig]
+[ballerina_task.database.dbConfig]
 user="root"
 password="root123"
 host="localhost"
 port=3306
 database="user_database"
+
